--- a/Assembly-CSharp-Editor-firstpass.csproj
+++ b/Assembly-CSharp-Editor-firstpass.csproj
@@ -56,38 +56,38 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Plugins\HexabodyVR\SampleScene\Scripts\Editor\HexaCommentsInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\Baker\BakerInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\BipedRagdollCreatorInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\PuppetMasterHumanoidConfigInspector.cs" />
     <Compile Include="Assets\Plugins\RootMotion\Editor\Shared Scripts\PropertyDrawers.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\WeightDrawer.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\Baker\HumanoidBakerInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\JointTools.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\Baker\Helpers\SaveClipFolderPanel.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\PuppetMasterPropInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\Shared Demo Scripts\CameraControllerInspector.cs" />
     <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\PuppetMasterInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\CharacterJointInspector.cs" />
     <Compile Include="Assets\Plugins\RootMotion\Editor\Shared Scripts\BipedReferencesInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\ColliderTools.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\ConvertToConfigurableJoints.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\JointInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\_DEMOS\PuppetMasterPropMeleeInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\ConfigurableJointInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\Shared Scripts\SerializedContent.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\_DEMOS\CharacterPuppetInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\PuppetMasterLiteInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\PropMuscleInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\Baker\Helpers\SaveClipFolderPanel.cs" />
     <Compile Include="Assets\Plugins\RootMotion\Editor\Shared Scripts\Inspector.cs" />
     <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\SymmetryTools.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\PropMuscleInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\Shared Scripts\InspectorCommentDrawer.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\Shared Demo Scripts\CameraControllerInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\Baker\GenericBakerInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\Shared Scripts\CommentsInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\BehaviourPuppetMasterPropsDrawer.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\_DEMOS\CharacterMeleeDemoInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\CharacterJointInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\Shared Scripts\SerializedContent.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\BipedRagdollCreatorInspector.cs" />
     <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\RagdollEditorInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\PuppetMasterPropInspector.cs" />
-    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\PuppetMasterLiteInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\ConvertToConfigurableJoints.cs" />
+    <Compile Include="Assets\Plugins\HexabodyVR\SampleScene\Scripts\Editor\HexaCommentsInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\BehaviourPuppetMasterPropsDrawer.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\ColliderTools.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\Baker\HumanoidBakerInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\Shared Scripts\InspectorCommentDrawer.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\Shared Scripts\CommentsInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\_DEMOS\PuppetMasterPropMeleeInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\_DEMOS\CharacterPuppetInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\ConfigurableJointInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\Baker\GenericBakerInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\PuppetMasterHumanoidConfigInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\JointTools.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\RagdollManager\JointInspector.cs" />
     <Compile Include="Assets\Plugins\RootMotion\Editor\Baker\Helpers\AnimationUtilityExtended.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\_DEMOS\CharacterMeleeDemoInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\Baker\BakerInspector.cs" />
+    <Compile Include="Assets\Plugins\RootMotion\Editor\PuppetMaster\WeightDrawer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -345,9 +345,6 @@
     <Reference Include="UnityEditor.WindowsStandalone.Extensions">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.5f1\Editor\Data\PlaybackEngines\WindowsStandaloneSupport\UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.VisualScripting.IonicZip">
-      <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.1\Editor\VisualScripting.Core\Dependencies\DotNetZip\Unity.VisualScripting.IonicZip.dll</HintPath>
-    </Reference>
     <Reference Include="log4netPlastic">
       <HintPath>Library\PackageCache\com.unity.collab-proxy@2.1.0\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
     </Reference>
@@ -357,20 +354,29 @@
     <Reference Include="Unity.Plastic.Newtonsoft.Json">
       <HintPath>Library\PackageCache\com.unity.collab-proxy@2.1.0\Lib\Editor\PlasticSCM\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="unityplastic">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@2.1.0\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.Plastic.Antlr3.Runtime">
       <HintPath>Library\PackageCache\com.unity.collab-proxy@2.1.0\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.YamlDotNet">
-      <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.1\Editor\VisualScripting.Core\Dependencies\YamlDotNet\Unity.VisualScripting.YamlDotNet.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.TextureAssets">
       <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.1\Editor\VisualScripting.Core\EditorAssetResources\Unity.VisualScripting.TextureAssets.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
       <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.1\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="HurricaneVR.Update">
+      <HintPath>Assets\HurricaneVR\Framework\Editor\Libs\HurricaneVR.Update.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.VisualScripting.IonicZip">
+      <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.1\Editor\VisualScripting.Core\Dependencies\DotNetZip\Unity.VisualScripting.IonicZip.dll</HintPath>
+    </Reference>
+    <Reference Include="unityplastic">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@2.1.0\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.VisualScripting.YamlDotNet">
+      <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.1\Editor\VisualScripting.Core\Dependencies\YamlDotNet\Unity.VisualScripting.YamlDotNet.dll</HintPath>
+    </Reference>
+    <Reference Include="PackageManagerAssembly">
+      <HintPath>Assets\UnityTechnologies\EffectExamples\Editor\PackageManagerAssembly\PackageManagerAssembly.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>Library\PackageCache\com.unity.ext.nunit@1.0.6\net35\unity-custom\nunit.framework.dll</HintPath>
@@ -855,6 +861,9 @@
     <Reference Include="Unity.XR.Interaction.Toolkit">
       <HintPath>Library\ScriptAssemblies\Unity.XR.Interaction.Toolkit.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Postprocessing.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.Postprocessing.Editor.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.VisualScripting.Flow">
       <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.Flow.dll</HintPath>
     </Reference>
@@ -875,6 +884,9 @@
     </Reference>
     <Reference Include="Unity.Burst">
       <HintPath>Library\ScriptAssemblies\Unity.Burst.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Postprocessing.Runtime">
+      <HintPath>Library\ScriptAssemblies\Unity.Postprocessing.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.XR.LegacyInputHelpers">
       <HintPath>Library\ScriptAssemblies\UnityEngine.XR.LegacyInputHelpers.dll</HintPath>
@@ -927,29 +939,37 @@
       <Project>{9A75DC04-4CC6-37C4-537E-65FE357F3AA6}</Project>
       <Name>Assembly-CSharp-firstpass</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.XR.Interaction.Toolkit.Samples.StarterAssets.csproj">
-      <Project>{9F1C5625-1C0C-EDED-F824-6A6983E07C71}</Project>
-      <Name>Unity.XR.Interaction.Toolkit.Samples.StarterAssets</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.XR.Interaction.Toolkit.Samples.StarterAssets.Editor.csproj">
-      <Project>{BF815EF5-9054-3D4C-6BFB-E8616F59F1E6}</Project>
-      <Name>Unity.XR.Interaction.Toolkit.Samples.StarterAssets.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="MLMExtensions.csproj">
-      <Project>{CAB7DA66-F452-B6A3-5123-8160A90BBEA7}</Project>
-      <Name>MLMExtensions</Name>
-    </ProjectReference>
     <ProjectReference Include="BakeryRuntimeAssembly.csproj">
       <Project>{93F287BB-4E0F-CBA7-198A-DFC3828C8B54}</Project>
       <Name>BakeryRuntimeAssembly</Name>
+    </ProjectReference>
+    <ProjectReference Include="HurricaneVR.Framework.csproj">
+      <Project>{820053FD-FD91-C5CF-4510-B128E6170B42}</Project>
+      <Name>HurricaneVR.Framework</Name>
     </ProjectReference>
     <ProjectReference Include="BakeryEditorAssembly.csproj">
       <Project>{8BBADD7B-548D-D4F5-43D8-E4F5908036DE}</Project>
       <Name>BakeryEditorAssembly</Name>
     </ProjectReference>
+    <ProjectReference Include="MLMExtensions.csproj">
+      <Project>{CAB7DA66-F452-B6A3-5123-8160A90BBEA7}</Project>
+      <Name>MLMExtensions</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.XR.Interaction.Toolkit.Samples.StarterAssets.csproj">
+      <Project>{9F1C5625-1C0C-EDED-F824-6A6983E07C71}</Project>
+      <Name>Unity.XR.Interaction.Toolkit.Samples.StarterAssets</Name>
+    </ProjectReference>
+    <ProjectReference Include="HurricaneVR.Editor.csproj">
+      <Project>{C60D8CE6-F50C-8825-5A7D-5199F7BBA5C0}</Project>
+      <Name>HurricaneVR.Editor</Name>
+    </ProjectReference>
     <ProjectReference Include="AmplifyShaderEditor.csproj">
       <Project>{CBD6260D-ABD1-6808-A786-AD11F274BB5C}</Project>
       <Name>AmplifyShaderEditor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.XR.Interaction.Toolkit.Samples.StarterAssets.Editor.csproj">
+      <Project>{BF815EF5-9054-3D4C-6BFB-E8616F59F1E6}</Project>
+      <Name>Unity.XR.Interaction.Toolkit.Samples.StarterAssets.Editor</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
