--- a/BakeryRuntimeAssembly.csproj
+++ b/BakeryRuntimeAssembly.csproj
@@ -56,27 +56,27 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Bakery\ftLocalStorage.cs" />
-    <Compile Include="Assets\Bakery\examples\scripts\VolumeTestScene2.cs" />
-    <Compile Include="Assets\Bakery\BakerySectorCapture.cs" />
-    <Compile Include="Assets\Bakery\ftLightmapsStorage.cs" />
-    <Compile Include="Assets\Bakery\BakerySkyLight.cs" />
-    <Compile Include="Assets\Bakery\ftGlobalStorage.cs" />
-    <Compile Include="Assets\Bakery\BakeryLightMesh.cs" />
     <Compile Include="Assets\Bakery\shader\Editor\BakeryShaderGUI.cs" />
-    <Compile Include="Assets\Bakery\BakeryLightmapGroup.cs" />
-    <Compile Include="Assets\Bakery\BakeryVolume.cs" />
-    <Compile Include="Assets\Bakery\BakeryLightmapGroupSelector.cs" />
-    <Compile Include="Assets\Bakery\examples\scripts\BakeryVolumeReceiver.cs" />
-    <Compile Include="Assets\Bakery\BakeryAlwaysRender.cs" />
-    <Compile Include="Assets\Bakery\BakeryProjectSettings.cs" />
-    <Compile Include="Assets\Bakery\BakeryDirectLight.cs" />
-    <Compile Include="Assets\Bakery\BakeryPointLight.cs" />
-    <Compile Include="Assets\Bakery\BakerySector.cs" />
-    <Compile Include="Assets\Bakery\BakeryPackAsSingleSquare.cs" />
-    <Compile Include="Assets\Bakery\ftLightmaps.cs" />
-    <Compile Include="Assets\Bakery\examples\scripts\BakeryVolumeTrigger.cs" />
     <Compile Include="Assets\Bakery\BakeryLightmappedPrefab.cs" />
+    <Compile Include="Assets\Bakery\ftGlobalStorage.cs" />
+    <Compile Include="Assets\Bakery\BakerySectorCapture.cs" />
+    <Compile Include="Assets\Bakery\BakerySkyLight.cs" />
+    <Compile Include="Assets\Bakery\ftLocalStorage.cs" />
+    <Compile Include="Assets\Bakery\examples\scripts\BakeryVolumeTrigger.cs" />
+    <Compile Include="Assets\Bakery\BakerySector.cs" />
+    <Compile Include="Assets\Bakery\BakeryLightmapGroup.cs" />
+    <Compile Include="Assets\Bakery\examples\scripts\BakeryVolumeReceiver.cs" />
+    <Compile Include="Assets\Bakery\examples\scripts\VolumeTestScene2.cs" />
+    <Compile Include="Assets\Bakery\BakeryDirectLight.cs" />
+    <Compile Include="Assets\Bakery\BakeryAlwaysRender.cs" />
+    <Compile Include="Assets\Bakery\BakeryPointLight.cs" />
+    <Compile Include="Assets\Bakery\BakeryProjectSettings.cs" />
+    <Compile Include="Assets\Bakery\ftLightmapsStorage.cs" />
+    <Compile Include="Assets\Bakery\BakeryLightMesh.cs" />
+    <Compile Include="Assets\Bakery\BakeryVolume.cs" />
+    <Compile Include="Assets\Bakery\BakeryPackAsSingleSquare.cs" />
+    <Compile Include="Assets\Bakery\BakeryLightmapGroupSelector.cs" />
+    <Compile Include="Assets\Bakery\ftLightmaps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Bakery\ftUnlitTerrain.shader" />
@@ -104,7 +104,7 @@
     <None Include="Assets\Bakery\ftFarSphereRender.shader" />
     <None Include="Assets\Bakery\BakeryMetaPass.cginc" />
     <None Include="Assets\Bakery\ftSkybox.shader" />
-    <None Include="Assets\Bakery\shader\Bakery.cginc" />
+    <None Include="Assets\Bakery\Bakery.cginc" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -359,9 +359,6 @@
     <Reference Include="UnityEditor.WindowsStandalone.Extensions">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.5f1\Editor\Data\PlaybackEngines\WindowsStandaloneSupport\UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.VisualScripting.IonicZip">
-      <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.1\Editor\VisualScripting.Core\Dependencies\DotNetZip\Unity.VisualScripting.IonicZip.dll</HintPath>
-    </Reference>
     <Reference Include="log4netPlastic">
       <HintPath>Library\PackageCache\com.unity.collab-proxy@2.1.0\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
     </Reference>
@@ -371,20 +368,29 @@
     <Reference Include="Unity.Plastic.Newtonsoft.Json">
       <HintPath>Library\PackageCache\com.unity.collab-proxy@2.1.0\Lib\Editor\PlasticSCM\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="unityplastic">
-      <HintPath>Library\PackageCache\com.unity.collab-proxy@2.1.0\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.Plastic.Antlr3.Runtime">
       <HintPath>Library\PackageCache\com.unity.collab-proxy@2.1.0\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.YamlDotNet">
-      <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.1\Editor\VisualScripting.Core\Dependencies\YamlDotNet\Unity.VisualScripting.YamlDotNet.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.TextureAssets">
       <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.1\Editor\VisualScripting.Core\EditorAssetResources\Unity.VisualScripting.TextureAssets.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
       <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.1\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="HurricaneVR.Update">
+      <HintPath>Assets\HurricaneVR\Framework\Editor\Libs\HurricaneVR.Update.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.VisualScripting.IonicZip">
+      <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.1\Editor\VisualScripting.Core\Dependencies\DotNetZip\Unity.VisualScripting.IonicZip.dll</HintPath>
+    </Reference>
+    <Reference Include="unityplastic">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@2.1.0\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.VisualScripting.YamlDotNet">
+      <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.1\Editor\VisualScripting.Core\Dependencies\YamlDotNet\Unity.VisualScripting.YamlDotNet.dll</HintPath>
+    </Reference>
+    <Reference Include="PackageManagerAssembly">
+      <HintPath>Assets\UnityTechnologies\EffectExamples\Editor\PackageManagerAssembly\PackageManagerAssembly.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Android.Types">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.5f1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.Types.dll</HintPath>
